--- a/styl.css
+++ b/styl.css
@@ -248,7 +248,11 @@ top:25px;
 	text-align: center;
 	margin: 0 auto;
 }
-
+@media screen and (max-width: 1280px) {
+	.posts button {
+		margin-top: -35px;
+	}
+}
 
 @media screen and (max-width: 768px) {
 	.telo p {
