--- a/styl.css
+++ b/styl.css
@@ -1,6 +1,6 @@
 
 body {
-	background-color: #e9e9e8;
+	background-image: url("background.jpg");
 		margin: 0;
 
 }
@@ -111,14 +111,14 @@ margin-top: 10px;
 	margin-top: 5px;
 }
 .buttons i{
-	color: white;
+	color: black;
 	font-size: 18px;
 	margin-right: 5px;
 }
 .buttons button {
 	width: 180px;
 	height: 30px;
-	background-color: #3c3c3c;
+	background-color: #d8d8d8;
 	border-radius: 6px 6px 6px;
 
 	margin-top: 5px;
@@ -126,14 +126,14 @@ margin-top: 10px;
 
 }
 .buttons button:hover {
-	background-color: #424141;
+	background-color: white;
 }
 
 .buttons b {
-	font-size: 12px;
+	font-size: 14px;
 	font-family: 'Raleway', sans-serif;
 	text-align: center;
-	color: white;
+	color: black;
 	margin-top: -2px;
 }
 
@@ -141,10 +141,9 @@ margin-top: 10px;
 .telo {
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
-	margin-top: 250px;
+	margin-top: 150px;
 	color: #3c3b3b;
 	display:block;
-margin-top: 155px;
 }
 .telo i {
 	color: black;
@@ -155,22 +154,65 @@ margin-top: 155px;
 .telo h2 {
 	font-size: 30px;
 	text-align: left;
-	margin-left: 50px;
 	margin-bottom: 30px;
+	padding-left: 15px;
 }
 .telo p {
 	text-align: left;
-	margin-left: 50px;
 	font-size: 22px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .bio {
-	width: 70%;
-	float: left;
+	width: 50%;
+	margin: 0 auto;
+	position: relative;
+	background-color: #d1d1d1;
+ 	border-radius: 10px 10px 10px;
+
 }
-.friends {
-	width: 30%;
+.bio h2{
+	color: white;
+	background-color: #3c3c3c;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+/*
+.groups {
 	float: right;
+	width: 24%;
+	margin-right: 5px;
+	background-color: #d1d1d1;
+	border: 3px solid white;
+ 	border-radius: 8px 8px 8px;
+}
+.groups i {
+	color: #52e509;
+	margin-right: 5px;
+	font-size: 25px;
+}
+.groups h2 {
+	text-align: left;
+	margin-left: 150px;
+}
+.groups li {
+	margin-left: 110px;
+	text-align: left;
+	font-size: 25px;
+}
+
+.groups li:hover {
+	background-color: gray;
+}
+
+.friends {
+	float: right;
+	width: 24%;
+	margin-right: 5px;
+	background-color: #d1d1d1;
+	border: 3px solid white;
+ 	border-radius: 8px 8px 8px;
 }
 .friends i {
 	color: #52e509;
@@ -189,7 +231,7 @@ margin-top: 155px;
 
 .friends li:hover {
 	background-color: gray;
-}
+} */
 .dropdown {
   position: relative;
   display: inline-block;
